--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 bcrypt~=4.1.2
 fastapi~=0.110.0
+httpx~=0.27.0
 passlib~=1.7.4
 psycopg2~=2.9.9
+PyJWT~=2.8.0
 pydantic[email]~=2.6.3
 pydantic_settings~=2.2.1
+pytest~=8.1.1
 sqlalchemy~=2.0.28
